--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>PAK RAT</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   </head>
   <body>
     <div class="header">
