--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,14 @@
     <meta charset="utf-8" />
     <title>PAK RAT</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
-    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+<!-- Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.2.2/firebase.js"></script>
+
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
   </head>
   <body>
     <div class="header">
@@ -13,12 +20,9 @@
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <div ng-view></div>
 
-    <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
 
-    <script src="app/auth/auth.js"></script>
-    <script src="app/links/links.js"></script>
-    <script src="app/shorten/shorten.js"></script>
+    <script src="app/gear/gear.js"></script>
     <script src="app/services/services.js"></script>
     <script src="app/app.js"></script>
   </body>
