--- a/client/index.html
+++ b/client/index.html
@@ -14,11 +14,18 @@
     <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
   </head>
   <body>
-    <div class="header">
+    <header class="header">
+      <button type="submit">Log In</button>
+      <button type="submit">Sign Up</button>
+      <img float="left" height="100px" width="auto" src="assets/packrat.png">
       <h1>PAK RAT</h1>
-    </div>
+    </header>
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <div ng-view></div>
+
+    <footer>
+      <img class="icon" width="200px" height="auto" align="center" src="assets/mountain.png">
+    </footer>
 
     <script src="lib/angular-route/angular-route.js"></script>
 
