--- a/client/app/gear/closet.html
+++ b/client/app/gear/closet.html
@@ -1,5 +1,5 @@
 <div class="container">
-
+  <!-- <h2>Add New Gear</h2> -->
   <div class="add-item" ng-controller="AddController" >
     <form class="add-item-form">
       <input type="text" ng-model="item.name" placeholder="item name">
@@ -11,7 +11,7 @@
   </div>
 
   <div class="item-list" ng-controller="ClosetController">
-    <h2>My Gear</h2>
+    <h2>My Gear Closet</h2>
     <table>
       <tr>
         <th>Item</th>
