--- a/client/app/gear/closet.html
+++ b/client/app/gear/closet.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!-- <h2>Add New Gear</h2> -->
-  <div class="add-item" ng-controller="AddController" >
+  <div class="add-item" ng-controller="ClosetController" >
     <form class="add-item-form">
       <input type="text" ng-model="item.name" placeholder="item name">
       <input type="text" ng-model="item.type" placeholder="type">
@@ -10,7 +10,7 @@
     </form>
   </div>
 
-  <div class="item-list" ng-controller="ClosetController">
+  <div class="item-list">
     <h2>My Gear Closet</h2>
     <table>
       <tr>
